WPDEV-15: first run of the model in docker
